tests/machine/x/rust/left_join.error
exit status 1
error[E0277]: `Customer` doesn't implement `std::fmt::Display`
  --> /workspace/mochi/tests/machine/x/rust/left_join.rs:28:124
   |
28 | ...}", "customer"), format!("{}", entry.customer), format!("{}", "total"), format!("{}", entry.total)].into_iter().filter(|s| !s.is_empty...
   |                                   ^^^^^^^^^^^^^^ `Customer` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `Customer`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
